--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "preset",
+  "name": "preset1",
   "version": "0.4.0",
   "description": "hx vue-project model",
   "main": "prompts.js"
